# PythonWeb_hw_14

./: pyproject.toml
quotes/quotes/: items.py  pipelines.py  settings.py
quotes/quotes/spiders/: authors.py
